---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure boop(a, b, c : int) end boop\nboop(1, 2, 3, 4)\nboop(1, 2, 3, 4, 5)\n"
---
"boop"@(FileId(1), 10..14) [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(value) int, ) -> void
"a"@(FileId(1), 15..16) [Param(Value, No)]: int
"b"@(FileId(1), 18..19) [Param(Value, No)]: int
"c"@(FileId(1), 21..22) [Param(Value, No)]: int
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 39..43: expected 3 arguments, found 4
| error in file FileId(1) for 39..43: call has 1 extra argument
error in file FileId(1) at 56..60: expected 3 arguments, found 5
| error in file FileId(1) for 56..60: call has 2 extra arguments
